--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -23,5 +23,5 @@ last_selected_language="GDScript"
 [color_picker]
 
 picker_shape=3
-recent_presets=PackedColorArray(0, 0.559484, 0.884653, 1, 0.711781, 0.483726, 0, 1, 4.81307e-07, 0.587604, 0.761125, 1, 0, 0.964706, 0.760784, 1, 0, 0.964706, 0, 1, 0, 0.0313726, 0, 1, 1, 0.0313726, 0, 1, 0.92549, 0, 0, 1, 1, 0, 0, 1)
+recent_presets=PackedColorArray(0.711781, 0.483726, 0, 1, 4.81307e-07, 0.587604, 0.761125, 1, 0, 0.964706, 0.760784, 1, 0, 0.964706, 0, 1, 0, 0.0313726, 0, 1, 1, 0.0313726, 0, 1, 0.92549, 0, 0, 1, 1, 0, 0, 1, 0, 0, 0, 0.6)
 color_mode=0
